save genres impl. Get ids fetch directly from source and dont save

--- a/ml-service/src/main/resources/application.properties
+++ b/ml-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=fetch-service
+spring.application.name=ml-service
 server.port=8083
 
 spring.cloud.azure.storage.blob.account-name=movierecsdataset
