--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8084
+spring.application.name=users-service
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movierecs
 spring.datasource.username=movierecs-admin
