initial conversion from file storage to mysql db

--- a/fetch-service/src/main/resources/application.properties
+++ b/fetch-service/src/main/resources/application.properties
@@ -6,3 +6,10 @@ source.url=https://api.themoviedb.org/3/
 
 spring.cloud.azure.storage.blob.account-name=movierecsdataset
 spring.cloud.azure.storage.blob.endpoint=https://movierecsdataset.blob.core.windows.net/datasets
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movierecs_fetch
+spring.datasource.username=movierecs-admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
