full conversion of assets from file to db. Before deleting resources that are probably not needed anymore

--- a/assets-service/src/main/resources/application.properties
+++ b/assets-service/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.application.name=ml-service
-server.port=8083
+spring.application.name=assets-service
+server.port=8082
+
+ids.url=http://files.tmdb.org/p/exports/movie_ids_03_08_2023.json.gz
+source.url=https://api.themoviedb.org/3/
 
 spring.cloud.azure.storage.blob.account-name=movierecsdataset
 spring.cloud.azure.storage.blob.endpoint=https://movierecsdataset.blob.core.windows.net/datasets
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movierecs_fetch
 spring.datasource.username=movierecs-admin
 spring.datasource.password=password
