--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=login-service
+spring.application.name=auth-service
 server.port=8085
 spring.security.oauth2.client.registration.github.client-id=c39df94603caa411d794
 spring.security.oauth2.client.registration.github.client-secret=${MOVIERECS_OAUTH2_GH_SECRET}
