--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8084
+server.port=0
 spring.application.name=users-service
 
 spring.jpa.hibernate.ddl-auto=update
@@ -7,3 +7,6 @@ spring.datasource.username=movierecs-admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
+eureka.instance.instance-id = ${spring.application.name}:${instanceId:${random.value}}
