added eureka defaultZone property to all services

--- a/ml-service/src/main/resources/application.properties
+++ b/ml-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=ml-service
 server.port=8083
 
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+
 spring.cloud.azure.storage.blob.account-name=movierecsdataset
 spring.cloud.azure.storage.blob.endpoint=https://movierecsdataset.blob.core.windows.net/datasets
 
