--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8085
 spring.application.name=auth-service
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
