--- a/assets-service/src/main/resources/application.properties
+++ b/assets-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=assets-service
 server.port=8082
 
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+
 ids.url=http://files.tmdb.org/p/exports/movie_ids_03_08_2023.json.gz
 source.url=https://api.themoviedb.org/3/
 
