--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=0
 spring.application.name=users-service
 
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movierecs
 spring.datasource.username=movierecs-admin
