resttemplate to feignclient conversion in admin service

--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8085
-spring.application.name=auth-service
+spring.application.name=admin-service
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
+
+logging.level.link.hiroshiprojects.movierecs.adminservice.feign.UsersClient = DEBUG
+
