--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8085
+
+# config read from {spring.application.name}/application-{spring.profiles.active}.properties
 spring.application.name=admin-service
+spring.profiles.active=dev
+
+
+# discovery-first bootstrap means config server location is obtained from discovery service
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-service
 
-logging.level.link.hiroshiprojects.movierecs.adminservice.feign.UsersClient = DEBUG
-
+# the docs say this is needed unless using config-first bootstrap
+spring.config.import=optional:configserver:
