docker-compose update to run all services at once, users-service still needs its own dockerized mysql instance

--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>link.hiroshiprojects.movierecs</groupId>
-	<artifactId>config-server</artifactId>
+	<artifactId>config-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>config-server</name>
 	<description>Config server for MovieRecs app</description>
