--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -16,3 +16,4 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    preferIpAddress: true
