--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: quay.io/keycloak/keycloak:21.0.1
     container_name: keycloak
     ports:
-      - 9000:8080
+      - 8080:8080
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=password
@@ -27,7 +27,6 @@ services:
       - POSTGRES_DB=keycloak
     volumes:
       - postgres:/var/lib/postgresql/data
-
   discoveryservice:
     image: hiroshinobuoka/discovery-service
     ports:
@@ -48,8 +47,6 @@ services:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
   adminservice:
     image: hiroshinobuoka/admin-service
-    ports:
-      - 8085:8085
     depends_on:
       - discoveryservice
       - configservice
@@ -57,15 +54,14 @@ services:
       restart_policy:
         condition: on-failure
         max_attempts: 3
-
     # overriding oauth2 URI from localhost -> Docker-managed host (i.e. "keycloak")
     environment:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
+      # for resttemplate call when checking if email exists
+      - keycloak.server.host=http://172.17.0.1:9000
   usersservice:
     image: hiroshinobuoka/users-service
-    ports:
-      - 8085:8085
     depends_on:
       - discoveryservice
       - configservice
@@ -75,5 +71,36 @@ services:
         max_attempts: 3
     environment:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
+      - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
+      - spring.datasource.url=jdbc:mysql://mysql-service:3306/movierecs
+  mysql-service:
+    image: mysql
+    ports:
+      - 3307:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=movierecs
+      - MYSQL_USER=movierecs-admin
+      - MYSQL_PASSWORD=password
+    volumes:
+      - mysql:/var/lib/movierecs-volumes/mysql-data
+  gateway-service:
+    image: hiroshinobuoka/gateway-service
+    ports:
+      - 8087:8087
+    depends_on:
+      - discoveryservice
+      - configservice
+      - usersservice
+      - adminservice
+    environment:
+      - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
+      - spring.security.oauth2.client.provider.keycloak.authorization-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/auth
+      - spring.security.oauth2.client.provider.keycloak.token-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/token
+      - spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
+
 volumes:
   postgres:
+    name: "keycloak-data"
+  mysql:
+    name: "users-data"
