--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-server.port=0
 spring.application.name=users-service
+spring.profiles.active=dev
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movierecs
-spring.datasource.username=movierecs-admin
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-service
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:9000/realms/movierecs-realm/protocol/openid-connect/certs
-eureka.instance.instance-id = ${spring.application.name}:${instanceId:${random.value}}
+spring.config.import=optional:configserver:
