changed gateway from permitall to authenticated

--- a/gateway-resource-service/src/main/resources/application.properties
+++ b/gateway-resource-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.config.import=optional:configserver:
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/movierecs-realm/protocol/openid-connect/certs
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/movierecs-realm
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/movierecs-realm/protocol/openid-connect/certs
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/movierecs-realm
 
 
