--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,7 @@ services:
     depends_on:
       - discoveryservice
       - configservice
+      - mysqlservice
     deploy:
       restart_policy:
         condition: on-failure
@@ -72,8 +73,8 @@ services:
     environment:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
-      - spring.datasource.url=jdbc:mysql://mysql-service:3306/movierecs
-  mysql-service:
+      - spring.datasource.url=jdbc:mysql://mysqlservice:3306/movierecs
+  mysqlservice:
     image: mysql
     ports:
       - 3307:3306
@@ -84,8 +85,8 @@ services:
       - MYSQL_PASSWORD=password
     volumes:
       - mysql:/var/lib/movierecs-volumes/mysql-data
-  gateway-service:
-    image: hiroshinobuoka/gateway-service
+  gatewayresourceservice:
+    image: hiroshinobuoka/gateway-resource-service
     ports:
       - 8087:8087
     depends_on:
@@ -94,10 +95,11 @@ services:
       - usersservice
       - adminservice
     environment:
+      - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
-      - spring.security.oauth2.client.provider.keycloak.authorization-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/auth
-      - spring.security.oauth2.client.provider.keycloak.token-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/token
-      - spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
+#      - spring.security.oauth2.client.provider.keycloak.authorization-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/auth
+#      - spring.security.oauth2.client.provider.keycloak.token-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/token
+#      - spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
 
 volumes:
   postgres:
