circuitbreaker for /users requests from admin service

--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.cloud.config.discovery.serviceId=config-service
 
 # the docs say this is needed unless using config-first bootstrap
 spring.config.import=optional:configserver:
+
+management.endpoints.web.exposure.include=*
+
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.users.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.users.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.users.waitDurationOnOpenState=30_000
+resilience4j.circuitbreaker.instances.users.permittedNumberOfCallsInHalfOpenState=2
+
+
