--- a/gateway-resource-service/src/main/resources/application.properties
+++ b/gateway-resource-service/src/main/resources/application.properties
@@ -9,11 +9,6 @@ spring.cloud.config.discovery.serviceId=config-service
 # the docs say this is needed unless using config-first bootstrap
 spring.config.import=optional:configserver:
 
-# for actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
-
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/movierecs-realm/protocol/openid-connect/certs
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/movierecs-realm
-
-
+management.info.env.enabled=true
