--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.config.import=optional:configserver:
 # for actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
-
+management.info.env.enabled=true
