--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,8 @@ services:
     depends_on:
       - discoveryservice
       - configservice
+      - usersservice
+      - zipkin
     deploy:
       restart_policy:
         condition: on-failure
@@ -60,6 +62,7 @@ services:
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       # for resttemplate call when checking if email exists
       - keycloak.server.host=http://172.17.0.1:9000
+      - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
   usersservice:
     image: hiroshinobuoka/users-service
     depends_on:
@@ -94,13 +97,39 @@ services:
       - configservice
       - usersservice
       - adminservice
+      - zipkin
     environment:
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
-#      - spring.security.oauth2.client.provider.keycloak.authorization-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/auth
-#      - spring.security.oauth2.client.provider.keycloak.token-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/token
-#      - spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
+      - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+  zipkinstorage:
+    image: openzipkin/zipkin-mysql
+    container_name: zipkinstorage
+    # Uncomment to expose the storage port for testing
+    # ports:
+    #   - 3308:3306
 
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    # Environment settings are defined here https://github.com/openzipkin/zipkin/blob/master/zipkin-server/README.md#environment-variables
+    environment:
+      - STORAGE_TYPE=mysql
+      - MYSQL_HOST=zipkinstorage
+      - MYSQL_USER=zipkin
+      - MYSQL_PASS=zipkin
+      # Uncomment to enable scribe
+      # - SCRIBE_ENABLED=true
+      # Uncomment to enable self-tracing
+      # - SELF_TRACING_ENABLED=true
+      # Uncomment to enable debug logging
+      # - JAVA_OPTS=-Dlogging.level.zipkin2=DEBUG
+    ports:
+      - 9411:9411
+      # Uncomment if you set SCRIBE_ENABLED=true
+      # - 9410:9410
+    depends_on:
+      - zipkinstorage
 volumes:
   postgres:
     name: "keycloak-data"
