--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,6 @@ services:
       - discoveryservice
       - configservice
       - usersservice
-      - zipkin
     deploy:
       restart_policy:
         condition: on-failure
@@ -61,7 +60,7 @@ services:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       # for resttemplate call when checking if email exists
-      - keycloak.server.host=http://172.17.0.1:9000
+      - keycloak.server.host=http://172.17.0.1:8080
       - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
   usersservice:
     image: hiroshinobuoka/users-service
@@ -77,6 +76,7 @@ services:
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       - spring.datasource.url=jdbc:mysql://mysqlservice:3306/movierecs
+      - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
   mysqlservice:
     image: mysql
     ports:
@@ -97,7 +97,6 @@ services:
       - configservice
       - usersservice
       - adminservice
-      - zipkin
     environment:
       - spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/movierecs-realm/protocol/openid-connect/certs
       - eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka/
@@ -130,6 +129,9 @@ services:
       # - 9410:9410
     depends_on:
       - zipkinstorage
+      - gatewayresourceservice
+      - usersservice
+      - adminservice
 volumes:
   postgres:
     name: "keycloak-data"
