--- a/ELK/docker-compose.yaml
+++ b/ELK/docker-compose.yaml
@@ -6,6 +6,9 @@ services:
     command: filebeat -e -strict.perms=false
     volumes:
       - ./filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - /var/lib/docker/containers:/logs/containers
+    networks:
+      - elk
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION}
     volumes:
@@ -59,7 +62,6 @@ services:
 
 networks:
   elk:
-    driver: bridge
 
 volumes:
   elasticsearch:
