--- a/ELK/logstash/pipeline/logstash.conf
+++ b/ELK/logstash/pipeline/logstash.conf
@@ -8,11 +8,21 @@ input {
 	}
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+    if [message] =~ "\tat" {
+        grok {
+            match => ["message", "^(\tat)"]
+            add_tag => ["stacktrace"]
+        }
+    }
+}
 
 output {
+    stdout {
+        codec => rubydebug
+    }
 	elasticsearch {
-		hosts => "elasticsearch:9200"
+		hosts => ["elasticsearch:9200"]
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 	}
